Fix text cell color, was too light to be seen on certain monitors/browsers.

--- a/IPython/frontend/html/notebook/static/css/notebook.css
+++ b/IPython/frontend/html/notebook/static/css/notebook.css
@@ -206,7 +206,7 @@ div.input_area {
     color: black;
     border: 1px solid #ddd;
     border-radius: 3px;
-    background: #fafafa;
+    background: #f4f4f4;
 }
 
 div.input_prompt {
